<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/content_background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dip"
            android:layout_marginLeft="1dip"
            android:layout_marginRight="1dip"
            android:background="@drawable/toprowselector"
            android:padding="5dip" >

            <TextView
                style="@style/text_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gddsns" />

            <TextView
                style="@style/text_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:text="@string/gddsnshm" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dip"
            android:layout_marginLeft="1dip"
            android:layout_marginRight="1dip"
            android:background="@drawable/rowselector"
            android:padding="5dip" >

            <TextView
                style="@style/text_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fponline" />

            <TextView
                style="@style/text_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:text="@string/fponlinehm" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dip"
            android:layout_marginLeft="1dip"
            android:layout_marginRight="1dip"
            android:background="@drawable/rowselector"
            android:padding="5dip" >

            <TextView
                style="@style/text_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zfxigk" />

            <TextView
                style="@style/text_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:text="@string/zfxxgkhm" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dip"
            android:layout_marginLeft="1dip"
            android:layout_marginRight="1dip"
            android:background="@drawable/rowselector"
            android:padding="5dip" >

            <TextView
                style="@style/text_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wzzgbm" />

            <TextView
                style="@style/text_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:text="@string/wzzgbmhm" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1dip"
            android:layout_marginLeft="1dip"
            android:layout_marginRight="1dip"
            android:background="@drawable/bottomrowselector"
            android:padding="5dip" >

            <TextView
                style="@style/text_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help2_sjdatzb" />

            <TextView
                style="@style/text_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:text="@string/help2_sjdatbhm" />
        </TableRow>
    </TableLayout>

</LinearLayout>