<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/content_background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="top"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/button_scan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tablebutton" 
         android:layout_margin="1dip">

        <TextView
            style="@style/text_size"
            android:layout_width="110dip"
            android:layout_height="60dip"
            android:gravity="center"
            android:text="@string/scan_text"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:id="@+id/history_fpcheck"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dip"
        android:background="@drawable/tablebutton" >

        <TextView
            style="@style/text_size"
            android:layout_width="110dip"
            android:layout_height="60dip"
            android:gravity="center"
            android:text="@string/scan_check"
            android:textStyle="bold" />
    </TableRow>



    <TableRow
        android:id="@+id/history_dj"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dip"
        android:background="@drawable/tablebutton" >

        <TextView
            style="@style/text_size"
            android:layout_width="110dip"
            android:layout_height="60dip"
            android:gravity="center"
            android:text="@string/scan_lucky"
            android:textStyle="bold" />
    </TableRow>

</TableLayout>